# PolynomialCpp

./: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Fraction.cpp  Fraction.h  Main.cpp  Polynomial.cpp  Polynomial.h  README.md
